# etl-apscheduler

./: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  logs_clean_up.sh  pyproject.toml  test.py
src/: main.py
src/api/: app.py  dependencies.py
src/api/routers/: __init__.py  health.py  (+2 more)
src/bot/: discord.py
src/configs/: __init__.py  env_config.py  jobs.yaml
src/exchange/: __init__.py  base.py  binance.py  bingx.py  bitmart.py  bitmex.py  bybit.py  okx.py  zoomex.py
src/jobs/: DATA_account_summary_1_minute.py  MART_master_portfolio_performance.py  MART_portfolio_performance.py  OP_delete_duplicate_data.py  OP_insert_data.py  OP_refill_master_portfolio_performance.py
src/model/: account_summary.py  scheduler.py
src/mongo/: __init__.py  base.py
src/scheduler/: depends_on_sample.py  job_runner.py  scheduler.py  service.py  signal_handlers.py
src/snapshot/: base.py  binance.py  bingx.py  bitmart.py  bitmex.py  bybit.py  factory.py  okx.py  zoomex.py
src/utils/: __init__.py  bson_utils.py  casting.py  logger_factory.py  misc.py  model_parser.py  system_metrics.py
test/: conftest.py
test/exchange/: test_binance_exchange_rest.py  test_bingx_exchange_rest.py  test_bitmart_exchange_rest.py  test_bitmex_exchange_rest.py  test_bybit_exchange_rest.py  test_okx_exchange_rest.py  test_zoomex_exchange_rest.py
test/fixtures/: exchanges.yaml
test/snapshot/: conftest.py  test_binance_snapshot.py  test_bingx_snapshot.py  test_bitmart_snapshot.py  test_bitmex_snapshot.py  test_bybit_snapshot.py  test_okx_snapshot.py  test_zoomex_snapshot.py
(+13 files in other folders)
